--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="logo"></div>
   <ul>
     <li><a href="file:///C:/Users/Ahmed%20Siddiqui/OneDrive/Web/Project/index.html" class="active">Home</a></li>
-    <li><a href="file:///C:/Users/Ahmed%20Siddiqui/OneDrive/Web/Project/about/about/index.html">About</a></li>
+    <li><a href="about/about/index.html">About</a></li>
     <li><a href="file:///C:/Users/Ahmed%20Siddiqui/OneDrive/Web/Project/services/index.html">Services</a></li>
     <li><a href="file:///C:/Users/Ahmed%20Siddiqui/OneDrive/Web/Project/Claim%20Form/SignUp.html">Sign up</a></li>
     <li><a href="file:///C:/Users/Ahmed%20Siddiqui/OneDrive/Web/Project/FAQ/index.html">FAQ's</a></li>
