--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
           we colaborate with eight corporations you can know about their versions visit by clicking their logo given below
           </p>
           <div class="lyerone" >
-            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="file:///C:/Users/Ahmed%20Siddiqui/OneDrive/Web/Project/home/cars%20main%20page/Lamborghini%20main%20page/index.html"></a></div>
-            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="file:///C:/Users/Ahmed%20Siddiqui/OneDrive/Web/Project/home/cars%20main%20page/Ford%20main%20page/index.html"></a></div>
-            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="file:///C:/Users/Ahmed%20Siddiqui/OneDrive/Web/Project/home/cars%20main%20page/Ferrari%20main%20page/index.html"></a></div>
-            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="file:///C:/Users/Ahmed%20Siddiqui/OneDrive/Web/Project/home/cars%20main%20page/Dodge%20main%20page/index.html"></a></div>
+            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="home/cars%20main%20page/Lamborghini%20main%20page/index.html"></a></div>
+            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="home/cars%20main%20page/Ford%20main%20page/index.html"></a></div>
+            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="home/cars%20main%20page/Ferrari%20main%20page/index.html"></a></div>
+            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="home/cars%20main%20page/Dodge%20main%20page/index.html"></a></div>
 
           </div>
           <div class="lyertwo" >
-            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="file:///C:/Users/Ahmed%20Siddiqui/OneDrive/Web/Project/home/cars%20main%20page/Rolls%20Royce%20main%20page/index.html"></a></div>
-            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="file:///C:/Users/Ahmed%20Siddiqui/OneDrive/Web/Project/home/cars%20main%20page/Mercedes%20Benz%20main%20page/index.html"></a></div>
-            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="file:///C:/Users/Ahmed%20Siddiqui/OneDrive/Web/Project/home/cars%20main%20page/Aston%20Martin%20main%20page/index.html"></a></div>
-            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="file:///C:/Users/Ahmed%20Siddiqui/OneDrive/Web/Project/home/cars%20main%20page/Lotus%20main%20page/index.html"></a></div>
+            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="home/cars%20main%20page/Rolls%20Royce%20main%20page/index.html"></a></div>
+            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="home/cars%20main%20page/Mercedes%20Benz%20main%20page/index.html"></a></div>
+            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="home/cars%20main%20page/Aston%20Martin%20main%20page/index.html"></a></div>
+            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="home/cars%20main%20page/Lotus%20main%20page/index.html"></a></div>
           </div>
         </div>
       </div>
