--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <ul>
     <li><a href="file:///C:/Users/Ahmed%20Siddiqui/OneDrive/Web/Project/index.html" class="active">Home</a></li>
     <li><a href="about/about/index.html">About</a></li>
-    <li><a href="file:///C:/Users/Ahmed%20Siddiqui/OneDrive/Web/Project/services/index.html">Services</a></li>
-    <li><a href="file:///C:/Users/Ahmed%20Siddiqui/OneDrive/Web/Project/Claim%20Form/SignUp.html">Sign up</a></li>
-    <li><a href="file:///C:/Users/Ahmed%20Siddiqui/OneDrive/Web/Project/FAQ/index.html">FAQ's</a></li>
+    <li><a href="services/index.html">Services</a></li>
+    <li><a href="claim%20form/signup.html">Sign up</a></li>
+    <li><a href="faq/index.html">FAQ's</a></li>
   </ul>
   </nav>
 
@@ -37,7 +37,7 @@
                                     <br>
                 customer satisfaction is our top priority!</p>
 
-        <a  href="file:///C:/Users/Ahmed%20Siddiqui/OneDrive/Web/Project/about/about/index.html">
+        <a  href="about/about/index.html">
           <span >ABOUT</span>
         </a>
         </div>
@@ -67,10 +67,10 @@
           we colaborate with eight corporations you can know about their versions visit by clicking their logo given below
           </p>
           <div class="lyerone" >
-            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="home/cars%20main%20page/Lamborghini%20main%20page/index.html"></a></div>
-            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="home/cars%20main%20page/Ford%20main%20page/index.html"></a></div>
-            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="home/cars%20main%20page/Ferrari%20main%20page/index.html"></a></div>
-            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="home/cars%20main%20page/Dodge%20main%20page/index.html"></a></div>
+            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="home/cars%20main%20page/lamborghini%20main%20page/index.html"></a></div>
+            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="home/cars%20main%20page/ford%20main%20page/index.html"></a></div>
+            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="home/cars%20main%20page/ferrari%20main%20page/index.html"></a></div>
+            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="home/cars%20main%20page/dodge%20main%20page/index.html"></a></div>
 
           </div>
           <div class="lyertwo" >
@@ -87,7 +87,7 @@
         <p data-aos="fade-up" data-aos-dalay="500">
           The offer is about the great discount for details please visit.
         </p>
-        <a href="file:///C:/Users/Ahmed%20Siddiqui/OneDrive/Web/Project/services/index.html">
+        <a href="services/index.html">
           <span >SERVICE</span>
         </a>
       </div>
