--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
           we colaborate with eight corporations you can know about their versions visit by clicking their logo given below
           </p>
           <div class="lyerone" >
-            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="home/cars%20main%20page/lamborghini%20main%20page/index.html"></a></div>
-            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="home/cars%20main%20page/ford%20main%20page/index.html"></a></div>
-            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="home/cars%20main%20page/ferrari%20main%20page/index.html"></a></div>
-            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="home/cars%20main%20page/dodge%20main%20page/index.html"></a></div>
+            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="home/cars%20main%20page/Lamborghini%20main%20page/index.html"></a></div>
+            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="home/cars%20main%20page/Ford%20main%20page/index.html"></a></div>
+            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="home/cars%20main%20page/Ferrari%20main%20page/index.html"></a></div>
+            <div class="block"data-aos="flip-left" data-aos-duration="1500" data-aos-delay="500"><a href="home/cars%20main%20page/Dodge%20main%20page/index.html"></a></div>
 
           </div>
           <div class="lyertwo" >
