--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <li><a href="file:///C:/Users/Ahmed%20Siddiqui/OneDrive/Web/Project/index.html" class="active">Home</a></li>
     <li><a href="about/about/index.html">About</a></li>
     <li><a href="services/index.html">Services</a></li>
-    <li><a href="claim%20form/signup.html">Sign up</a></li>
+    <li><a href="Claim%20Form/SignUp.html">Sign up</a></li>
     <li><a href="faq/index.html">FAQ's</a></li>
   </ul>
   </nav>
