--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <li><a href="about/about/index.html">About</a></li>
     <li><a href="services/index.html">Services</a></li>
     <li><a href="Claim%20Form/SignUp.html">Sign up</a></li>
-    <li><a href="faq/index.html">FAQ's</a></li>
+    <li><a href="FAQ/index.html">FAQ's</a></li>
   </ul>
   </nav>
 
