--- a/about/about/index.html
+++ b/about/about/index.html
@@ -10,11 +10,11 @@
     <nav data-aos="fade-down" data-aos-duration="1500">
       <div class="logo"></div>
       <ul>
-        <li><a href="file:///C:/Users/Ahmed%20Siddiqui/OneDrive/Web/Project/index.html">Home</a></li>
-        <li><a href="file:///C:/Users/Ahmed%20Siddiqui/OneDrive/Web/Project/about/about/index.html" class="active">About</a></li>
-        <li><a href="file:///C:/Users/Ahmed%20Siddiqui/OneDrive/Web/Project/services/index.html">Services</a></li>
-        <li><a href="file:///C:/Users/Ahmed%20Siddiqui/OneDrive/Web/Project/Claim%20Form/SignUp.html">Sign up</a></li>
-        <li><a href="file:///C:/Users/Ahmed%20Siddiqui/OneDrive/Web/Project/FAQ/index.html">FAQ's</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about/about/index.html" class="active">About</a></li>
+        <li><a href="services/index.html">Services</a></li>
+        <li><a href="Claim%20Form/SignUp.html">Sign up</a></li>
+        <li><a href="FAQ/index.html">FAQ's</a></li>
       </ul>
     </nav>
 
